# beholder

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
api/: README.md  ai-evaluation.js  geocoding.js  package-lock.json  package.json  streetview.js  utils.js  worker-original.js  worker.js  wrangler.toml
beholder/: __init__.py  aesthetic_evaluation.py  coordinates.py  location_cache.py  sampling.py  streetview.py
database/: README.md  d1_schema.sql
database/migrations/: 001_init.sql  002_add_image_url.sql  003_update_viewport_function.sql
frontend/: README.md  app.js  debug.html  dev-server.mjs  index.html  test-maps.html  utils.js
python/: README.md  beauty_evaluator.py  bulk_sampler.py  coordinate_generator.py  coordinates.py  prompt_tester.py  pyproject.toml  requirements.txt  smart_beauty_evaluator.py  test_integration.py  upload_to_heatmap.py
python/beholder/: aesthetic_evaluation.py  geocoding.py
